// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bubble should render correctly a black bubble 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#2B1911",
    }
  }
  color={
    {
      "backgroundColor": "transparent",
    }
  }
  iconColor={
    {
      "color": "#2B1911",
    }
  }
  iconSize={16}
  textColor={
    {
      "color": "#2B1911",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly a black bubble with icon 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#2B1911",
    }
  }
  color={
    {
      "backgroundColor": "transparent",
    }
  }
  iconColor={
    {
      "color": "#2B1911",
    }
  }
  iconId="chevronsUp"
  iconSize={16}
  textColor={
    {
      "color": "#2B1911",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly a gray bubble 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#9F8C82",
    }
  }
  color={
    {
      "backgroundColor": "transparent",
    }
  }
  iconColor={
    {
      "color": "#9F8C82",
    }
  }
  iconSize={16}
  textColor={
    {
      "color": "#9F8C82",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly a gray bubble with icon 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#9F8C82",
    }
  }
  color={
    {
      "backgroundColor": "transparent",
    }
  }
  iconColor={
    {
      "color": "#9F8C82",
    }
  }
  iconId="chevronsUp"
  iconSize={16}
  textColor={
    {
      "color": "#9F8C82",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly a primary bubble 1`] = `
<BubbleBase
  color={
    {
      "backgroundColor": "#F56522",
    }
  }
  iconColor={
    {
      "color": "#FFFCFA",
    }
  }
  iconSize={16}
  textColor={
    {
      "color": "#FFFCFA",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly a primary bubble with icon 1`] = `
<BubbleBase
  color={
    {
      "backgroundColor": "#F56522",
    }
  }
  iconColor={
    {
      "color": "#FFFCFA",
    }
  }
  iconId="chevronsUp"
  iconSize={16}
  textColor={
    {
      "color": "#FFFCFA",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly a primary-mild bubble 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#FCCCB6",
    }
  }
  color={
    {
      "backgroundColor": "#FEEDE5",
    }
  }
  iconColor={
    {
      "color": "#F56522",
    }
  }
  iconSize={16}
  textColor={
    {
      "color": "#2B1911",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly a primary-mild bubble with icon 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#FCCCB6",
    }
  }
  color={
    {
      "backgroundColor": "#FEEDE5",
    }
  }
  iconColor={
    {
      "color": "#F56522",
    }
  }
  iconId="chevronsUp"
  iconSize={16}
  textColor={
    {
      "color": "#2B1911",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly with black bubble with no background 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#2B1911",
    }
  }
  color={
    {
      "backgroundColor": "transparent",
    }
  }
  ghost={true}
  iconColor={
    {
      "color": "#2B1911",
    }
  }
  iconSize={16}
  textColor={
    {
      "color": "#2B1911",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly with gray bubble with no background 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#9F8C82",
    }
  }
  color={
    {
      "backgroundColor": "transparent",
    }
  }
  ghost={true}
  iconColor={
    {
      "color": "#9F8C82",
    }
  }
  iconSize={16}
  textColor={
    {
      "color": "#9F8C82",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly with primary bubble with no background 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#F56522",
    }
  }
  color={
    {
      "backgroundColor": "#FFFCFA",
    }
  }
  ghost={true}
  iconColor={
    {
      "color": "#F56522",
    }
  }
  iconSize={16}
  textColor={
    {
      "color": "#F56522",
    }
  }
>
  Text
</BubbleBase>
`;

exports[`Bubble should render correctly with primary-mild bubble with no background 1`] = `
<BubbleBase
  borderColor={
    {
      "borderColor": "#2B1911",
    }
  }
  color={
    {
      "backgroundColor": "#FFFCFA",
    }
  }
  ghost={true}
  iconColor={
    {
      "color": "#2B1911",
    }
  }
  iconSize={16}
  textColor={
    {
      "color": "#2B1911",
    }
  }
>
  Text
</BubbleBase>
`;
